results/SpecGenBench/2-shot/log-CanConstruct-2023_11_05_22_51_29.txt
class CanConstruct {
    /*@ public normal_behavior
      @    requires (\forall int i; 0 <= i && i < ransomNote.length(); (int)Character.MIN_VALUE <= (int)ransomNote.charAt(i) && (int)ransomNote.charAt(i) <= (int)Character.MAX_VALUE);
      @    requires (\forall int i; 0 <= i && i < magazine.length(); (int)Character.MIN_VALUE <= (int)magazine.charAt(i) && (int)magazine.charAt(i) <= (int)Character.MAX_VALUE);
      @    ensures \result <==> (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; cnt[i] >= 0));
      @*/
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        //@ loop_invariant 0 <= i && i <= magazine.length();
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] == (\old(cnt[magazine.charAt(j) - 'a']) + 1));
        //@ decreases magazine.length() - i;
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ loop_invariant 0 <= i && i <= ransomNote.length();
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] == (\old(cnt[ransomNote.charAt(j) - 'a']) - 1));
        //@ decreases ransomNote.length() - i;
        for (char c : ransomNote.toCharArray()) {
            cnt[c - 'a']--;
            if(cnt[c - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:5: error: cannot find symbol
      @    ensures \result <==> (ransomNote.length() <= magazine.length() && (\forall int i; 0 <= i && i < 26; cnt[i] >= 0));
                                                                                                               ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:12: error: cannot find symbol
        //@ loop_invariant 0 <= i && i <= magazine.length();
                                ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:12: error: cannot find symbol
        //@ loop_invariant 0 <= i && i <= magazine.length();
                                     ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:13: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] == (\old(cnt[magazine.charAt(j) - 'a']) + 1));
                                                         ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:13: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] == (\old(cnt[magazine.charAt(j) - 'a']) + 1));
                                                                                                   ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:14: error: cannot find symbol
        //@ decreases magazine.length() - i;
                                          ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:18: error: cannot find symbol
        //@ loop_invariant 0 <= i && i <= ransomNote.length();
                                ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:18: error: cannot find symbol
        //@ loop_invariant 0 <= i && i <= ransomNote.length();
                                     ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:19: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] == (\old(cnt[ransomNote.charAt(j) - 'a']) - 1));
                                                         ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:19: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] == (\old(cnt[ransomNote.charAt(j) - 'a']) - 1));
                                                                                                     ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:20: error: cannot find symbol
        //@ decreases ransomNote.length() - i;
                                            ^
  symbol:   variable i
  location: class CanConstruct
11 errors

